--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="container header-flex">
             <div>
-                <img src="assets/logo-icon-normal.svg" alt="Logo">
+                <img src="logo-icon-normal.svg" alt="Logo">
             </div>
             <nav class="navigation">
                 <a href="#">Beranda</a>
@@ -33,7 +33,7 @@
             <button>mulai belajar </button>
         </div>
         <div >
-            <img src="assets/img-hero@2x.png" class="gambar">
+            <img src="img-hero@2x.png" class="gambar">
         </div>
 
         
